--- a/css/PRUEBA.CSS
+++ b/css/PRUEBA.CSS
@@ -14,6 +14,29 @@ body{
     background-position: center;
     background-attachment: fixed;
 }
+#hero{
+    min-height: 100vh;
+    position: relative;
+
+}
+video{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.capa{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #1c1c1d;
+    opacity: .5;
+    mix-blend-mode: overlay;
+}
 
 header{
     height: 100%;
