--- a/PRUEBA2.CSS
+++ b/PRUEBA2.CSS
@@ -9,17 +9,55 @@ h1{font-size: 3.5em;}
 h2{font-size: 2.7em;}
 h3{font-size: 2em;}
 p{font-size: 1.25em;}
+
 #indice{
-    font-size: 1em;
-    text-align: center;
-    font-weight: bold;
-    max-width: 20%;
-    min-width: 15%;
+	color: #FFF;
+	transition: all 0.3s;
+	position: relative;
     text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 20px;
-    color: white;
-    background-color: darkgrey; 
+    padding: 5px;
+}
+#indice span {
+	transition: all 0.3s;
+}
+#indice::before {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	opacity: 0;
+	transition: all 0.3s;
+	border-top-width: 1px;
+	border-bottom-width: 1px;
+	border-top-style: solid;
+	border-bottom-style: solid;
+	border-top-color: rgba(255,255,255,0.5);
+	border-bottom-color: rgba(255,255,255,0.5);
+	transform: scale(0.1, 1);
+}
+#indice:hover span {
+	letter-spacing: 5px;
+}
+#indice:hover::before {
+	opacity: 1;	
+	transform: scale(1, 1);	
+}
+#indice::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 1;
+	transition: all 0.3s;
+}
+#indice:hover::after {
+	opacity: 5;	
+	transform: scale(0.1, 1);
 }
 #indice:hover{
     background-color:rgb(90, 90, 90);
@@ -42,7 +80,7 @@ p{font-size: 1.25em;}
     margin: auto;
 }
 .color-acento{
-    color: blue;
+    color:rgb(90, 90, 90)
 }
 
 #barra{
@@ -96,11 +134,11 @@ video {
 
 #sobre-nosotros{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: left;
+    justify-content: left;
     text-align: center;
     flex-direction: column;
-    height: 90vh;
+    height: 100vh;
     color: white;
     background-image: linear-gradient(
         0deg,
@@ -112,18 +150,20 @@ video {
      background-size: cover;
      background-position: center center;
 }
-}
-#sobre-nosotros .container{
-    text-align: center;
-    padding: 200px 12px;
+#sn{
+    margin: 10px;
+    height: 400px;
+    width: 350px;
+    padding: 10px;
+    background-color: rgba(0,0,0, .5);
+    border-radius: 100px;
 }
 #nuestra-flota{
     display: flex;
-    align-items: center;
-    justify-content: center;
+    align-items: right;
+    justify-content: right;
     text-align: center;
-    flex-direction: column;
-    height: 90vh;
+    height: 100vh;
     color: white;
     background-image: linear-gradient(
         0deg,
@@ -135,6 +175,72 @@ video {
      background-size: cover;
      background-position: center center;
 }
-#nuestra-flota .container{
+#nf{
+    margin: 10px;
+    height: 400px;
+    width: 350px;
+    padding: 10px;
+    background-color: rgba(0,0,0, .5);
+    border-radius: 100px;
+}
+#planifica-tu-vuelo{
+    text-align: left;    
+    height: 100vh;
+    color: white;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.5),
+        rgba(0,0,0,0.5)
+    )
+     ,url("planifica\ tu\ vuelo.jpg");
+     background-repeat: no repeat;
+     background-size: cover;
+     background-position: center center;
+}
+#ptv{
+    margin: 100px;
+    height: auto;
+    width: 450px;
+    padding: 30px;
+    background-color: rgba(0,0,0, .5);
+    border-radius: 15px;
+    float: left;
+}
+h2{
+    margin: 0 0 30px;
+    padding: 0;
+    font-size: 40px;
+    color: #d7dddf;
     text-align: center;
+}
+h3{
+    margin: 0 0 30px;
+    padding: 0;
+    font-size: 15px;
+    color: #d7dddf;
+    text-align: center;
+}
+.contenedor .elemento label{
+    color: #d7dddf;
+}
+.contenedor .elemento input{
+    width: 100%;
+    padding: 10px 0;
+    border-radius: 10px;
+    color: white;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid whitesmoke;
+    border-top:  1px solid whitesmoke;
+    border-right:  1px solid whitesmoke;
+    border-left:  1px solid whitesmoke;
+    margin: 3px;
+}
+.contenedor .elemento input[type="submit"]{
+    background-color: #646262;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 15px;
+    margin-top: 10px;
 }
