--- a/PRUEBA2.CSS
+++ b/PRUEBA2.CSS
@@ -142,8 +142,8 @@ video {
     color: white;
     background-image: linear-gradient(
         0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
+        rgba(0,0,0,0.3),
+        rgba(0,0,0,0.3)
     )
      ,url("Tecam_P2006t.jpg");
      background-repeat: no repeat;
@@ -167,8 +167,8 @@ video {
     color: white;
     background-image: linear-gradient(
         0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
+        rgba(0,0,0,0.3),
+        rgba(0,0,0,0.3)
     )
      ,url("N294CM-1.jpeg");
      background-repeat: no repeat;
@@ -183,14 +183,14 @@ video {
     background-color: rgba(0,0,0, .5);
     border-radius: 100px;
 }
-#planifica-tu-vuelo{
+#planifica-tu-vuelo{    
     text-align: left;    
     height: 100vh;
     color: white;
     background-image: linear-gradient(
         0deg,
-        rgba(0,0,0,0.5),
-        rgba(0,0,0,0.5)
+        rgba(0,0,0,0.3),
+        rgba(0,0,0,0.3)
     )
      ,url("planifica\ tu\ vuelo.jpg");
      background-repeat: no repeat;
@@ -243,4 +243,27 @@ h3{
     cursor: pointer;
     padding: 15px;
     margin-top: 10px;
+}
+#button-up{
+    width:60px;
+    height: 60px;
+    background: #646262;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    align-items: center;
+    color: white;
+    border-radius: 50%;
+    font-size: 20px;
+    position: fixed;
+    bottom: 50px;
+    right: 50px;
+    cursor: pointer;
+    border: 4px solid transparent;    
+    transition: all 300ms ease;
+    transform: scale(0);
+}
+#button-up:hover{
+    transform: scale(1.1);
+    border-color: rgba (0,0,0,0,.1);
 }
