--- a/PRUEBA2.CSS
+++ b/PRUEBA2.CSS
@@ -26,7 +26,7 @@ p{font-size: 1.25em;}
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 100%;
+	height: 100vh;
 	z-index: 1;
 	opacity: 0;
 	transition: all 0.3s;
@@ -151,12 +151,14 @@ video {
      background-position: center center;
 }
 #sn{
+    position: absolute;
     margin: 10px;
-    height: 400px;
+    height: auto;
     width: 350px;
     padding: 10px;
     background-color: rgba(0,0,0, .5);
     border-radius: 100px;
+    font-size: 2vh;
 }
 #nuestra-flota{
     display: flex;
@@ -176,35 +178,40 @@ video {
      background-position: center center;
 }
 #nf{
+    position: absolute;
     margin: 10px;
-    height: 400px;
+    height: auto;
     width: 350px;
     padding: 10px;
     background-color: rgba(0,0,0, .5);
     border-radius: 100px;
+    font-size: 2vh;
 }
-#planifica-tu-vuelo{    
-    text-align: left;    
-    height: 100vh;
+#planifica-tu-vuelo{
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    text-align: justify;
+    height: 100%;
     color: white;
     background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.3),
-        rgba(0,0,0,0.3)
-    )
+    0deg,
+    rgba(0,0,0,0.3),
+    rgba(0,0,0,0.3)
+)
      ,url("planifica\ tu\ vuelo.jpg");
      background-repeat: no repeat;
      background-size: cover;
      background-position: center center;
 }
 #ptv{
-    margin: 100px;
+    margin: 10px;
     height: auto;
-    width: 450px;
-    padding: 30px;
+    padding: 10px;
+    width: auto;
     background-color: rgba(0,0,0, .5);
-    border-radius: 15px;
-    float: left;
+    border-radius: 40px;
+    font-size: 2vh;
 }
 h2{
     margin: 0 0 30px;
