--- a/PRUEBA2.CSS
+++ b/PRUEBA2.CSS
@@ -192,7 +192,7 @@ video {
     align-items: left;
     justify-content: left;
     text-align: justify;
-    height: 100%;
+    height: 100vh;
     color: white;
     background-image: linear-gradient(
     0deg,
@@ -206,7 +206,7 @@ video {
 }
 #ptv{
     margin: 10px;
-    height: auto;
+    height: 100vh;
     padding: 10px;
     width: auto;
     background-color: rgba(0,0,0, .5);
@@ -273,4 +273,52 @@ h3{
 #button-up:hover{
     transform: scale(1.1);
     border-color: rgba (0,0,0,0,.1);
+}
+.contenedor{
+    background-color: lightgray;
+    max-width: 120em;
+    width: 90%;
+    padding: 1em;
+}
+.contenedor .ul{
+    width: auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+.contenedor .li{
+    padding: 1em;
+    margin:0 2em 0 0;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 15px;
+    margin-top: 10px;
+    border-radius: 30px;    
+    transition: all .5s ease;
+}
+.contenedor .li.activo{
+    background-color: #646262;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 30px;
+}
+.contenedor .subcontenedor{
+    position: relative;
+    min-height: 10vh;
+}
+.contenedor .bloque{
+    padding: 1em;
+    height: 90vh;
+    margin: 1em;
+    position: absolute;
+    top: 0;     
+    opacity: 0;   
+    transition: all .5s ease;
+}
+.contenedor .bloque.activo{
+     opacity: 1;
 }
