--- a/PRUEBA2.CSS
+++ b/PRUEBA2.CSS
@@ -8,14 +8,48 @@ body{
 h1{font-size: 3.5em;}
 h2{font-size: 2.7em;}
 h3{font-size: 2em;}
+h6{margin-left: 3.8vh;}
 p{font-size: 1.25em;}
 
+header{    
+    padding: 1em;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    height: 20vh;
+    background-image: linear-gradient(
+        0deg,
+        rgba(0,0,0,0.3),
+        rgba(0,0,0,0.3)
+    )
+}
+ul{
+    width: auto;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    align-items: center;
+}
+li{
+    padding: 1em;
+    margin:0 2em 0 0;
+    letter-spacing: 3px;
+    text-transform: uppercase;
+    cursor: pointer;
+    padding: 15px;
+    margin-top: 10px;
+    border-radius: 30px;    
+    transition: all .5s ease;
+}
 #indice{
 	color: #FFF;
 	transition: all 0.3s;
 	position: relative;
     text-decoration: none;
     padding: 5px;
+    border-radius: 5px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 #indice span {
 	transition: all 0.3s;
@@ -33,9 +67,7 @@ p{font-size: 1.25em;}
 	border-top-width: 1px;
 	border-bottom-width: 1px;
 	border-top-style: solid;
-	border-bottom-style: solid;
 	border-top-color: rgba(255,255,255,0.5);
-	border-bottom-color: rgba(255,255,255,0.5);
 	transform: scale(0.1, 1);
 }
 #indice:hover span {
@@ -60,46 +92,17 @@ p{font-size: 1.25em;}
 	transform: scale(0.1, 1);
 }
 #indice:hover{
-    background-color:rgb(90, 90, 90);
+    background-color:#646262;
 }
-#vola{
-    font-size: 1.5em;
-    font-weight: bold;
-    padding: 10px 30px;
-    border-radius: 20px;
-    border: 1px solid rgba(0,0,0,0.5);
-    box-shadow: 2px 2px 10px rgba(0,0,0,0.5);
-    color: white;
-    background-color: darkgrey; 
-}
-#vola:hover{
-    background-color:rgb(90, 90, 90);
-}
+
 .container{
     max-width: 1400px;
     margin: auto;
 }
 .color-acento{
-    color:rgb(90, 90, 90)
+    color:rgb(24, 24, 24);
+    font-weight: bold;
 }
-
-#barra{
-    display: flex;
-    flex-direction: column;
-    text-align: left;
-    padding-bottom: 25px;
-}
- header a{
-     padding: 5px 12px;
-     text-decoration: none;
-     font-weight: bold;
-     color: darkgrey; 
- }
-
- header a:hover{
-     color:rgb(90, 90, 90);
-    }
-
 #hero{
     min-height: 110vh;
     position: relative;
@@ -141,9 +144,9 @@ video {
     height: 100vh;
     color: white;
     background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.3),
-        rgba(0,0,0,0.3)
+        270deg,
+        rgba(0,0,0,0.7),
+        rgba(0,0,0,0)
     )
      ,url("Tecam_P2006t.jpg");
      background-repeat: no repeat;
@@ -151,14 +154,15 @@ video {
      background-position: center center;
 }
 #sn{
-    position: absolute;
-    margin: 10px;
+    position: absolute;    
+    margin: 2vh;
     height: auto;
     width: 350px;
     padding: 10px;
-    background-color: rgba(0,0,0, .5);
+    background-color: rgba(0,0,0,0.2);
     border-radius: 100px;
     font-size: 2vh;
+    letter-spacing: 2px;
 }
 #nuestra-flota{
     display: flex;
@@ -168,9 +172,9 @@ video {
     height: 100vh;
     color: white;
     background-image: linear-gradient(
-        0deg,
-        rgba(0,0,0,0.3),
-        rgba(0,0,0,0.3)
+        90deg,
+        rgba(0,0,0,0.7),
+        rgba(0,0,0,0.0)
     )
      ,url("N294CM-1.jpeg");
      background-repeat: no repeat;
@@ -179,39 +183,35 @@ video {
 }
 #nf{
     position: absolute;
-    margin: 10px;
+    margin: 2vh;
     height: auto;
-    width: 350px;
+    width: 60vh;
     padding: 10px;
-    background-color: rgba(0,0,0, .5);
+    background-color: rgba(0,0,0, .2);
     border-radius: 100px;
-    font-size: 2vh;
+    font-size: 2vh;    
+    letter-spacing: 2px;
 }
 #planifica-tu-vuelo{
     display: flex;
     align-items: left;
     justify-content: left;
     text-align: justify;
-    height: 100vh;
+    height: auto;
     color: white;
     background-image: linear-gradient(
-    0deg,
-    rgba(0,0,0,0.3),
-    rgba(0,0,0,0.3)
+        270deg,
+        rgba(0,0,0,0.7),
+        rgba(0,0,0,0.4)
 )
      ,url("planifica\ tu\ vuelo.jpg");
      background-repeat: no repeat;
      background-size: cover;
      background-position: center center;
 }
-#ptv{
-    margin: 10px;
-    height: 100vh;
-    padding: 10px;
-    width: auto;
-    background-color: rgba(0,0,0, .5);
-    border-radius: 40px;
-    font-size: 2vh;
+
+#multileg{
+    display: inline-block;
 }
 h2{
     margin: 0 0 30px;
@@ -274,51 +274,116 @@ h3{
     transform: scale(1.1);
     border-color: rgba (0,0,0,0,.1);
 }
-.contenedor{
-    background-color: lightgray;
-    max-width: 120em;
-    width: 90%;
-    padding: 1em;
-}
-.contenedor .ul{
-    width: auto;
+
+.tabs {
     display: flex;
-    flex-flow: row nowrap;
-    justify-content: flex-start;
+    flex-wrap: wrap;
+    max-width: 400px;
+    font-family: sans-serif;
+    left:.3vh;
+    margin: 2vh;
+    height: auto;
+    width: 60vh;
+    padding: 10px;
+    background-color: rgba(0,0,0, .2);
+    border-radius: 30px;
+    font-size: 2vh;    
+    letter-spacing: 2px;
+  }
+  .tabs__label{
+	color: #FFF;
+	transition: all 0.3s;
+	position: relative;
+    text-decoration: none;
+    padding: 10px 16px;
+    border-radius: 5px;
     align-items: center;
+    justify-content: center;
+    text-align: center;
 }
-.contenedor .li{
-    padding: 1em;
-    margin:0 2em 0 0;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    cursor: pointer;
-    padding: 15px;
-    margin-top: 10px;
-    border-radius: 30px;    
-    transition: all .5s ease;
+.tabs__label span {
+	transition: all 0.3s;
+    background-color:#646262;
 }
-.contenedor .li.activo{
+.tabs__label::before {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 100vh;
+	z-index: 1;
+	opacity: 0;
+	transition: all 0.3s;
+	border-top-width: 1px;
+	border-bottom-width: 1px;
+	border-top-style: solid;
+	border-top-color: rgba(255,255,255,0.5);
+	transform: scale(0.1, 1);
+}
+
+.tabs__label:hover::before {
+	opacity: 1;	
+	transform: scale(1, 1);	
+}
+
+.tabs__label:hover::after {
+	opacity: 5;	
+	transform: scale(0.1, 1);
+    background-color:#646262;
+}
+.tabs__label:hover{
+    background-color:#646262;
+}
+  .elemento{
+      color: whitesmoke;
+      font-weight: bold;
+      font-size: 2vh;    
+      letter-spacing: .5vh;
+  }
+  input{
+    width: 100%;
+    padding: 10px 0;
+    border-radius: 10px;
+    color: white;
+    background: transparent;
+    border: none;
+    border-bottom: 1px solid whitesmoke;
+    border-top:  1px solid whitesmoke;
+    border-right:  1px solid whitesmoke;
+    border-left:  1px solid whitesmoke;
+    margin: 3px;
+}
+.contenedor .elemento input[type="submit"]{
     background-color: #646262;
     letter-spacing: 3px;
     text-transform: uppercase;
     cursor: pointer;
     padding: 15px;
+    margin-top: 10px;
+}
+    
+  .tabs__radio {
+    display: none;
+  }
+  
+  .tabs__content {
+    order: 1;
+    width: 100%;
+    line-height: 1.5;
+    font-size: 0.9em;
+    display: none;
     border-radius: 30px;
-}
-.contenedor .subcontenedor{
-    position: relative;
-    min-height: 10vh;
-}
-.contenedor .bloque{
-    padding: 1em;
-    height: 90vh;
-    margin: 1em;
-    position: absolute;
-    top: 0;     
-    opacity: 0;   
-    transition: all .5s ease;
-}
-.contenedor .bloque.activo{
-     opacity: 1;
-}
+  }
+  
+  .tabs__radio:checked + .tabs__label {
+    font-weight: bold;
+    color: white;
+    font-size: 2vh;    
+    letter-spacing: .5;
+  }
+  
+  .tabs__radio:checked + .tabs__label + .tabs__content {
+    display: initial;
+  }
+  
