--- a/PRUEBA2.CSS
+++ b/PRUEBA2.CSS
@@ -8,7 +8,14 @@ body{
 h1{font-size: 3.5em;}
 h2{font-size: 2.7em;}
 h3{font-size: 2em;}
-h6{margin-left: 3.8vh;}
+h6{
+    text-align: center;
+    font-size: 1vh;
+    border-top-width: 1px;
+	border-bottom-width: 1px;
+	border-top-style: solid;
+	border-top-color: rgba(255,255,255,1.5);
+}
 p{font-size: 1.25em;}
 
 header{    
@@ -145,7 +152,7 @@ video {
     color: white;
     background-image: linear-gradient(
         270deg,
-        rgba(0,0,0,0.7),
+        rgba(0,0,0,0.0),
         rgba(0,0,0,0)
     )
      ,url("Tecam_P2006t.jpg");
@@ -173,7 +180,7 @@ video {
     color: white;
     background-image: linear-gradient(
         90deg,
-        rgba(0,0,0,0.7),
+        rgba(0,0,0,0.0),
         rgba(0,0,0,0.0)
     )
      ,url("N294CM-1.jpeg");
@@ -201,8 +208,8 @@ video {
     color: white;
     background-image: linear-gradient(
         270deg,
-        rgba(0,0,0,0.7),
-        rgba(0,0,0,0.4)
+        rgba(0,0,0,0.0),
+        rgba(0,0,0,0.0)
 )
      ,url("planifica\ tu\ vuelo.jpg");
      background-repeat: no repeat;
@@ -319,7 +326,8 @@ h3{
 	border-bottom-width: 1px;
 	border-top-style: solid;
 	border-top-color: rgba(255,255,255,0.5);
-	transform: scale(0.1, 1);
+	transform: scale(0.1, 1);    
+    cursor: pointer;
 }
 
 .tabs__label:hover::before {
@@ -343,7 +351,7 @@ h3{
   }
   input{
     width: 100%;
-    padding: 10px 0;
+    padding: 8px 0;
     border-radius: 10px;
     color: white;
     background: transparent;
@@ -352,20 +360,28 @@ h3{
     border-top:  1px solid whitesmoke;
     border-right:  1px solid whitesmoke;
     border-left:  1px solid whitesmoke;
-    margin: 3px;
 }
-.contenedor .elemento input[type="submit"]{
+#boton{
+    width: 100%;
+    padding: 8px 0;
+    border-radius: 10px;
+    color: white;
     background-color: #646262;
-    letter-spacing: 3px;
-    text-transform: uppercase;
-    cursor: pointer;
-    padding: 15px;
-    margin-top: 10px;
+    border: none;
+    border-bottom: 1px solid whitesmoke;
+    border-top:  1px solid whitesmoke;
+    border-right:  1px solid whitesmoke;
+    border-left:  1px solid whitesmoke;
+}
+#boton:hover{
+    background-color: #1f1e1e;
 }
     
   .tabs__radio {
     display: none;
   }
+
+
   
   .tabs__content {
     order: 1;
@@ -381,9 +397,10 @@ h3{
     color: white;
     font-size: 2vh;    
     letter-spacing: .5;
+    background-color:#646262;
   }
   
   .tabs__radio:checked + .tabs__label + .tabs__content {
     display: initial;
+    
   }
-  
