--- a/PRUEBA2.CSS
+++ b/PRUEBA2.CSS
@@ -284,8 +284,8 @@ h3{
 	transition: all 0.3s;
 	position: relative;
     text-decoration: none;
-    padding: 10px 16px;
-    border-radius: 5px;
+    padding: 5%;
+    border-radius: 50px;
     align-items: center;
     justify-content: center;
     text-align: center;
@@ -369,7 +369,7 @@ h3{
     order: 1;
     width: 100%;
     line-height: 1.5;
-    font-size: 0.9em;
+    font-size: 0.em;
     display: none;
     border-radius: 30px;
   }
@@ -378,7 +378,7 @@ h3{
     font-weight: bold;
     color: white;
     font-size: 2vh;    
-    letter-spacing: .5;
+    letter-spacing: .5px;
     background-color:#646262;
   }
   
