--- a/PRUEBA2.CSS
+++ b/PRUEBA2.CSS
@@ -259,6 +259,7 @@ h3{
     border-color: rgba (0,0,0,0, 0.1);
 }
 
+
 .tabs{
     display: flex;
     flex-wrap: wrap;
@@ -277,12 +278,12 @@ h3{
 	color: #FFF;
 	transition: all 0.3s;
 	position: relative;
-    text-decoration: none;
-    padding: 1.5em;
-    border-radius: 50px;
+    padding: 20px;
+    border-radius: 30px;
     align-items: center;
     justify-content: center;
     text-align: center;
+    display: inline-block;
 }
 .tabs__label span {
 	transition: all 0.3s;
@@ -293,8 +294,8 @@ h3{
 	position: absolute;
 	bottom: 0;
 	left: 0;
-	width: 100%;
-	height: 100vh;
+	width: auto;
+	height: auto;
 	z-index: 1;
 	opacity: 0;
 	transition: all 0.3s;
@@ -304,6 +305,7 @@ h3{
 	border-top-color: rgba(255,255,255,0.5);
 	transform: scale(0.1, 1);    
     cursor: pointer;
+    text-decoration: none;
 }
 
 .tabs__label:hover::before {
@@ -379,3 +381,9 @@ h3{
   .tabs__radio:checked + .tabs__label + .tabs__content {
     display: initial;    
   }
+
+
+  input[type=date]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    display: none;
+}
