--- a/PRUEBA2.CSS
+++ b/PRUEBA2.CSS
@@ -180,16 +180,15 @@ video {
     background-image: linear-gradient(
         90deg,
         rgba(0,0,0,0.0),
-        rgba(0,0,0,0.0)
+        rgba(0,0,0,0.3)
     )
-     ,url("N294CM-1.jpeg");
+    ,url("planifica\ tu\ vuelo.jpg");
      background-repeat: no repeat;
      background-size: cover;
      background-position: center center;
 }
 #nf{
     position: absolute;
-    margin: 2vh;
     height: auto;
     width: 60vh;
     padding: 10px;
@@ -197,6 +196,7 @@ video {
     border-radius: 100px;
     font-size: 2vh;    
     letter-spacing: 2px;
+    margin-top: 2vh;
 }
 #planifica-tu-vuelo{
     display: flex;
@@ -207,10 +207,10 @@ video {
     color: white;
     background-image: linear-gradient(
         90deg,
-        rgba(0,0,0,0.4),
+        rgba(0,0,0,0.0),
         rgba(0,0,0,0.0)
 )
-     ,url("planifica\ tu\ vuelo.jpg");
+     ,url("N294CM-1.jpeg");
      background-repeat: no repeat;
      background-size: cover;
      background-position: center center;
@@ -358,8 +358,6 @@ h3{
   .tabs__radio {
     display: none;
   }
-
-
   
   .tabs__content {
     order: 1;
